Nutch Change Log
   
Nutch Current Development 1.11-SNAPSHOT

* NUTCH-2109 Create a brute force click-all-ajax-links utility fucntion for selenium interactive plugin (Asitang Mishra)

* NUTCH-2108 Add a function to the selenium interactive plugin interface to do multiple manipulation of driver and then return the data (Asitang Mishra)

* NUTCH-2124 Fetcher following same redirect again and again (Yogendra Kumar Soni via snagel)

* NUTCH-2123 Seed List REST API returns Text but headers indicate/require JSON
  (Aron Ahmadia, Sujen Shah via mattmann)

* NUTCH-2086 Nutch 1.X Webui (Sujen Shah, mattmann via lewismc)

* NUTCH-2121 Update javadoc link for Hadoop 2.4.0 in default.properties (Sujen Shah)

* NUTCH-2119 Eclipse shows build path errors on building Nutch (Sujen Shah)

* NUTCH-2117 NutchServer CLI Option for CMD_PORT is incorrect and should be CMD_HOST (zhangmianhongni via lewismc)

* NUTCH-2115 - Add total counts to mimetype stats (Jimmy Joyce via lewismc)

* NUTCH-2111 Delete temporary files location for selenium tmp files after driver quits (Kim Whitehall via lewismc)

* NUTCH-2095 WARC exporter for the CommonCrawlDataDumper (jorgelbg)

* NUTCH-2102 WARC Exporter (jnioche)

* NUTCH-2106 Runtime to contain Selenium and dependencies only once (snagel)

* NUTCH-2104 Add documentation to the protocol-selenium plugin Readme file 
  re: selenium grid implementation (Kim Whitehall via mattmann)

* NUTCH-2099 Refactoring the REST endpoints for integration with 
  webui (Sujen Shah via mattmann)

* NUTCH-2098 Add null SeedUrl constructor (Aron Ahmadia via mattmann)

* NUTCH-2093 Indexing filters to use current signatures (markus)

* NUTCH-2092: Unit Test for NutchServer (Sujen Shah via mattmann)

* NUTCH-2096 Explicitly indicate broswer binary to use when selecting 
  selenium remote option in config (Kim Whitehall via mattmann)

* NUTCH-2090 Refactor Seed Resource in REST API (Sujen Shah
  via mattmann)

* NUTCH-2088 Add URL Processing Check to Interactive Selenium 